Set scrollbar css into global site file and fixed the account textarea

--- a/BlaaBog/SBO.BlaaBog.Web/wwwroot/css/site.css
+++ b/BlaaBog/SBO.BlaaBog.Web/wwwroot/css/site.css
@@ -32,3 +32,17 @@ body {
     --bs-tooltip-bg: var(--bd-violet-bg);
     --bs-tooltip-color: var(--bs-white);
 }
+
+div::-webkit-scrollbar, ul::-webkit-scrollbar, p::-webkit-scrollbar, textarea::-webkit-scrollbar {
+    width: 5px;
+}
+
+div::-webkit-scrollbar-thumb, ul::-webkit-scrollbar-thumb, p::-webkit-scrollbar-thumb, textarea::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    border: 3px solid;
+}
+
+div::-webkit-scrollbar-track, ul::-webkit-scrollbar-track, p::-webkit-scrollbar-track, textarea::-webkit-scrollbar-track {
+    background: gray;
+    border-radius: 5px;
+}
